deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esports-ner-service
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: esports-ner-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esports-ner-service
spec:
  selector:
    matchLabels:
      app: esports-ner-service
  replicas: 1
  minReadySeconds: 120
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: esports-ner-service
    spec:
      containers:
      - name: esports-ner-service
        image: kpentchev/esports-ner-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "0.2"
            memory: 1.5Gi
        readinessProbe:
          httpGet:
            path: /ready
            port: 5000
          initialDelaySeconds: 240
          timeoutSeconds: 10
          failureThreshold: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 250
          timeoutSeconds: 10
          failureThreshold: 10
