deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: esports-ner-service
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - ens.pentchev.eu
    secretName: esports-ner-service-cert
  rules:
  - host: ens.pentchev.eu
    http:
      paths:
      - backend:
          serviceName: esports-ner-service
          servicePort: 5000
